fit_predictor/mkp_aco/evaluates/run13/2025-01-26_23-35-21/problem_iter33_response12.txt_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 14
    random\ufffd\u0176\ufffd = np.random.normal(0, 0.1, density.shape)
           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 6: invalid continuation byte
